merge logic
Took 37 minutes